--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,86 +6,63 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ProfileActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/setupToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="29dp"
+
+    <ImageView
+        android:id="@+id/User_photo"
+        android:layout_width="157dp"
+        android:layout_height="129dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:background="@color/colorPrimary"
+        android:layout_marginStart="115dp"
+        android:layout_marginTop="44dp"
+        android:src="@mipmap/ic_launcher"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    </android.support.v7.widget.Toolbar>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="631dp"
+    <Button
+        android:id="@+id/update_Profile"
+        android:layout_width="378dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="19dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="311dp"
+        android:background="@drawable/rounded_button_transparent"
+        android:text="تحديث"
+        android:textColor="@color/colorPrimaryDark" />
+
+    <Button
+        android:id="@+id/deleteAccount_Profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="17dp"
+        android:layout_marginEnd="13dp"
+        android:layout_marginBottom="231dp"
+        android:background="@drawable/rounded_button_transparent"
+        android:text="حذف المستخدم"
+        android:textColor="@color/colorPrimaryDark" />
+
+
+    <EditText
+        android:id="@+id/userName_prfile"
+        android:layout_width="225dp"
+        android:layout_height="63dp"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="28dp"
-        android:background="@color/colorWhite">
-
-        <ImageView
-            android:id="@+id/setup_image"
-            android:layout_width="148dp"
-            android:layout_height="106dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="15dp"
-            android:src="@drawable/app_logo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
-
-
-        <Button
-            android:id="@+id/setup_btn"
-            android:layout_width="178dp"
-            android:layout_height="24dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="226dp"
-            android:layout_marginBottom="471dp"
-            android:background="@drawable/rounded_button_solid"
-            android:text="حفظ الصوره"
-            android:textAllCaps="false"
-            android:textColor="@color/colorDarkRed"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/userName"
-            android:layout_width="167dp"
-            android:layout_height="40dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="53dp"
-            android:layout_marginEnd="48dp"
-            android:ems="10"
-            android:text="Your Name.."
-            android:textAlignment="center"
-            android:textColor="@color/DarkGray"
-            android:textSize="20sp" />
-
-        <Button
-            android:id="@+id/deletebtn"
-            android:layout_width="232dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="103dp"
-            android:layout_marginBottom="274dp"
-            android:background="@drawable/rounded_button_solid"
-            android:text="حذف الحساب"
-            android:textColor="@color/colorDarkRed" />
-
-
-    </RelativeLayout>
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="190dp"
+        android:layout_marginEnd="102dp"
+        android:ems="10"
+        android:text="UserName"
+        android:textAlignment="center"
+        android:textColor="@color/DarkGray"
+        android:textSize="20sp" />
 
 
 
